RESOLVED FIXED73697
[Qt] [WK2] MiniBrowser --touch asserts in debug build
https://bugs.webkit.org/show_bug.cgi?id=73697
Summary [Qt] [WK2] MiniBrowser --touch asserts in debug build
Viatcheslav Ostapenko
Reported 2011-12-02 14:07:52 PST
0 WebKit::QtViewportInteractionEngine::ensureContentWithinViewportBoundary QtViewportInteractionEngine.cpp 350 0x421fef 1 WebKit::QtViewportInteractionEngine::itemSizeChanged QtViewportInteractionEngine.cpp 521 0x422a8d 2 WebKit::QtViewportInteractionEngine::qt_static_metacall moc_QtViewportInteractionEngine.cpp 69 0x422c70 3 QMetaObject::activate qobject.cpp 3391 0x4cfc755 4 QQuickItem::widthChanged moc_qquickitem.cpp 742 0x2deb9a9 5 QQuickItem::geometryChanged qquickitem.cpp 2772 0x2de3c17 6 QQuickWebPage::geometryChanged qquickwebpage.cpp 143 0x348585 7 QQuickItem::setWidth qquickitem.cpp 4172 0x2de86e4 8 QQuickWebViewPrivate::didChangeContentsSize qquickwebview.cpp 135 0x34afc3 9 QtWebPageProxy::didChangeContentsSize QtWebPageProxy.cpp 195 0x414ba2 10 WebKit::WebPageProxy::didChangeContentsSize WebPageProxy.cpp 2318 0x3b8ee7 11 CoreIPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WebCore::IntSize const&), WebCore::IntSize> HandleMessage.h 19 0x522e9f 12 CoreIPC::handleMessage<Messages::WebPageProxy::DidChangeContentsSize, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WebCore::IntSize const&)> HandleMessage.h 277 0x51e909 13 WebKit::WebPageProxy::didReceiveWebPageProxyMessage WebPageProxyMessageReceiver.cpp 186 0x51c191 14 WebKit::WebPageProxy::didReceiveMessage WebPageProxy.cpp 1529 0x3b3b86 15 WebKit::WebProcessProxy::didReceiveMessage WebProcessProxy.cpp 319 0x3eb580 16 CoreIPC::Connection::dispatchMessage Connection.cpp 689 0x2e2925 17 CoreIPC::Connection::dispatchMessages Connection.cpp 716 0x2e2afb 18 MemberFunctionWorkItem0<CoreIPC::Connection>::execute WorkItem.h 79 0x2ebc72 19 RunLoop::performWork RunLoop.cpp 63 0x2ec3c2 20 RunLoop::TimerObject::performWork RunLoopQt.cpp 49 0x2ed802 21 RunLoop::TimerObject::qt_static_metacall RunLoopQt.moc 48 0x2ee4d4 22 QMetaCallEvent::placeMetaCall qobject.cpp 529 0x4cf641c 23 QObject::event qobject.cpp 1111 0x4cf7d3b 24 QApplicationPrivate::notify_helper qapplication.cpp 4080 0x3da7f76 25 QApplication::notify qapplication.cpp 3497 0x3da58c7 26 MiniBrowserApplication::notify MiniBrowserApplication.cpp 85 0x804f681 27 QCoreApplication::notifyInternal qcoreapplication.cpp 823 0x4cccae9 28 QCoreApplication::sendEvent qcoreapplication.h 208 0x3d99457 29 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1465 0x4ccdbea 30 QCoreApplication::sendPostedEvents qcoreapplication.cpp 1335 0x4ccd6b9 31 QCoreApplication::sendPostedEvents qcoreapplication.h 213 0x46ce9c8 32 QWindowSystemInterface::sendWindowSystemEvents qwindowsysteminterface_qpa.cpp 296 0x46ce78e 33 QEventDispatcherQPA::processEvents qeventdispatcher_qpa.cpp 70 0x6f331f0 34 QEventLoop::processEvents qeventloop.cpp 149 0x4cc9da3 35 QEventLoop::exec qeventloop.cpp 225 0x4cca009 36 QCoreApplication::exec qcoreapplication.cpp 1090 0x4ccd159 37 QGuiApplication::exec qguiapplication.cpp 510 0x46de6a9 38 QApplication::exec qapplication.cpp 3381 0x3da557e 39 main main.cpp 71 0x804e544
Attachments
Patch (1.24 KB, patch)
2011-12-02 14:22 PST, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2011-12-02 14:22:01 PST
Eric Seidel (no email)
Comment 2 2011-12-02 14:49:49 PST
Comment on attachment 117690 [details] Patch rs=me.
WebKit Review Bot
Comment 3 2011-12-02 21:27:07 PST
Comment on attachment 117690 [details] Patch Clearing flags on attachment: 117690 Committed r101902: <http://trac.webkit.org/changeset/101902>
WebKit Review Bot
Comment 4 2011-12-02 21:27:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.