[Qt] [WK2] MiniBrowser --touch asserts in debug build https://bugs.webkit.org/show_bug.cgi?id=73697

Patch by Viatcheslav Ostapenko <ostapenko.viatcheslav@nokia.com> on 2011-12-02
Reviewed by Eric Seidel.

Add missing guard to QtViewportInteractionEngine::itemSizeChanged().

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::itemSizeChanged):

git-svn-id: svn://svn.chromium.org/blink/trunk@101902 bbb929c8-8fbe-4397-9dbb-9b2b20218538