third_party/WebKit/Source/WebKit2/UIProcess/qt/QtViewportInteractionEngine.cpp
@@ -518,6 +518,7 @@ void QtViewportInteractionEngine::itemSizeChanged()
     if (m_suspendCount)
         return;
 
+    ViewportUpdateDeferrer guard(this);
     ensureContentWithinViewportBoundary();
 }
 
